# quest1

./: .gitignore  README.md  READQUEST.md  READQUEST1.md  READQUEST2.md  api.py  application.py  characters.json  cli.py  domain.py  dto.py  fastapi.py  main.py  pyproject.toml  repository.py  test.html
presentations/: 00presentation_index.qmd  LICENSE  _quarto.yml  styles.css  test.qmd
tests/: test_api.py  test_cli.py  test_repository.py
