[project]
name = "quest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.124.4",
    "fire>=0.6.0",
    "nanoid>=2.0.0",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
]

[project.scripts]
character = "cli:main"

[tool.setuptools]
packages = []
py-modules = ["cli", "api", "application", "domain", "dto", "repository"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
